pamc/src/tests/sample_code/should_succeed/single_file/should_succeed_with_warnings/check/nf_no_goal_exists.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let no_goal_exists = check (goal = Nat) {
    Nat.O
};

let no_goal_exists_question = check (goal = ?) {
    Nat.O
};
